# tinysparql

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  COPYING  COPYRIGHT  ChangeLog  Dockerfile  HACKING.md  MAINTAINERS  Makefile.am  Makefile.decl  Makefile.extractdirs  NEWS  README  README.md  TODO  Tracker.files  Tracker.includes  acinclude.m4  aclocal.m4  autogen.sh  check-style.py  chrome.manifest  config.h.meson.in  configure.ac  configure.in  install.rdf  libtracker-gtk.pc.in  meson.build  meson_integration_commands.sh  meson_options.txt  sqlite3_versions_known_bad  sqlite3_versions_tested  tinysparql.doap  tracker.doap  tracker.pc.in  tracker.spec  trackerd-kde.desktop  (+4 more)
data/: .cvsignore  .gitignore  Makefile.am  build client.txt  libtracker-gtk.pc.in  meson.build  mysql-stored-procs.sql  mysql-system.sql  mysql-tracker.sql  org.freedesktop.Tracker.FTS.gschema.xml  org.freedesktop.Tracker.Store.gschema.xml  org.freedesktop.Tracker.gschema.xml  sqlite-cache.sql  sqlite-metadata.sql  sqlite-service-triggers.sql  sqlite-service-types.sql  sqlite-service.sql  sqlite-stored-procs.sql  sqlite-tracker-triggers.sql  sqlite-tracker.sql  sqlite-xesam.sql  tracker-client.pc.in  tracker-extract.pc.in  tracker-indexer-module-1.0.pc.in  tracker-introspect.xml  tracker-miner-apps.desktop.in  tracker-miner-apps.desktop.in.in  tracker-miner-flickr.desktop.in.in  tracker-miner-fs.desktop.in.in  tracker-miner-rss.desktop.in.in  tracker-miner.pc.in  tracker-module-1.0.pc.in  tracker-module.pc.in  tracker-sparql.pc.in  tracker-status-icon.desktop.in.in  tracker-stop-words.txt  tracker-store.desktop.in.in  tracker.pc.in  tracker.service  tracker.service.in  (+2 more)
data/db/: Makefile.am  sqlite-cache.sql  sqlite-contents.sql  sqlite-email.sql  sqlite-service-triggers.sql  sqlite-service-types.sql  sqlite-service.sql  sqlite-stored-procs.sql  sqlite-tracker.sql  sqlite-user-data.sql
data/dbus/: Makefile.am  org.freedesktop.Tracker.Indexer.service.in  org.freedesktop.Tracker.Miner.Applications.service.in  org.freedesktop.Tracker.Miner.FS.service.in  org.freedesktop.Tracker.Miner.Files.service.in  org.freedesktop.Tracker.service.in  org.freedesktop.Tracker1.Extract.service.in  org.freedesktop.Tracker1.Miner.Applications.service.in  org.freedesktop.Tracker1.Miner.Extract.service.in  org.freedesktop.Tracker1.Miner.Flickr.service.in  org.freedesktop.Tracker1.Miner.Identica.service.in  org.freedesktop.Tracker1.Miner.Twitter.service.in  org.freedesktop.Tracker1.Miner.Userguides.service.in  org.freedesktop.Tracker1.Writeback.service.in  tracker-backup.xml  tracker-busy-notifier.xml  tracker-daemon.xml  tracker-extract-priority.xml  tracker-extract.xml  tracker-files.xml  tracker-indexer.xml  tracker-keywords.xml  tracker-metadata.xml  tracker-miner-files-index.xml  tracker-miner-files-reindex.xml  tracker-miner-web.xml  tracker-miner.xml  tracker-resources-class.xml  tracker-resources.xml  tracker-search.xml  tracker-statistics.xml  tracker-status.xml  tracker-writeback.xml  tracker-xesam.xml
data/english/: Makefile.am  errmsg.sys
data/gschemas/: .gitignore  Makefile.am  org.freedesktop.Tracker.DB.xml.in  org.freedesktop.Tracker.Extract.gschema.xml.in  org.freedesktop.Tracker.Extractor.gschema.xml.in  org.freedesktop.Tracker.FTS.gschema.xml.in  org.freedesktop.Tracker.Miner.FileSystem.gschema.xml.in  org.freedesktop.Tracker.Miner.Files.gschema.xml.in  org.freedesktop.Tracker.Store.DB.gschema.xml.in  org.freedesktop.Tracker.Store.DB.xml.in  org.freedesktop.Tracker.Store.gschema.xml.in  org.freedesktop.Tracker.gschema.xml.in
data/icons/: Makefile.am
data/languages/: Makefile.am  stopwords.en  stopwords.hu
data/miners/: .gitignore  Makefile.am  tracker-miner-applications.desktop.in  tracker-miner-applications.desktop.in.in  tracker-miner-extract.desktop.in.in  tracker-miner-feeds.desktop.in  tracker-miner-files.desktop.in  tracker-miner-files.desktop.in.in  tracker-miner-flickr.desktop.in.in  tracker-miner-identica.desktop.in.in  tracker-miner-rss.desktop.in  tracker-miner-rss.desktop.in.in  tracker-miner-twitter.desktop.in.in  tracker-miner-userguides.desktop.in.in
data/modules/: applications.module  evolution.module  files.module  gaim-conversations.module
data/ontologies/: 10-xsd.description  10-xsd.ontology  11-rdf.description  11-rdf.ontology  12-nrl.description  12-nrl.ontology  20-dc.description  20-dc.ontology  30-nie.description  30-nie.ontology  31-nao.description  31-nao.ontology  32-nco.description  32-nco.ontology  33-nfo.description  33-nfo.ontology  34-nmo.description  34-nmo.ontology  35-ncal.description  35-ncal.ontology  (+27 more)
docs/: .svnignore  MakeFile.am  Makefile.am  htmless.1  meson.build  mkdocs.yml  tracker-applet.1  tracker-extract.1  tracker-files.1  tracker-meta-folder.1  tracker-preferences.1  tracker-query.1  tracker-search-tool.1  tracker-search.1  tracker-stats.1  tracker-tag.1  tracker-thumbnailer.1  tracker.cfg.5  trackerd.1
fuzzing/: README.md  driver.c  fuzz.h  fuzz_ontology_turtle.c  fuzz_ontology_turtle.corpus  fuzz_ontology_turtle.dict  fuzz_query.c  fuzz_query.corpus  fuzz_query.dict  fuzz_rdf_jsonld.c  fuzz_rdf_jsonld.corpus  fuzz_rdf_jsonld.dict  fuzz_rdf_trig.c  fuzz_rdf_trig.corpus  fuzz_rdf_trig.dict  fuzz_rdf_turtle.c  fuzz_rdf_turtle.corpus  get-samples.sh  meson.build
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  ar.po  as.po  be.po  be@latin.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  (+38 more)
src/: Makefile.am  README.md  create-miner-symlinks.sh  install-generated-header.sh  meson.build
tests/: .gitignore  Makefile.am  flatpak-info  meson.build  test-bus.conf.in
trunk/: .cvsignore  .svnignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  TODO  acinclude.m4  configure.ac  libtracker-gtk.pc.in  trackerd.desktop.in.in
utils/: Makefile.am  magic.txt  meson.build  run-uncrustify.sh  tracker-sandbox  uncrustify.cfg
(+5441 files in other folders)
